fix overflow on mobile

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -11,6 +11,7 @@ body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 
 /*--------------------------------------------------------------
@@ -92,6 +93,9 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 9999;
     overflow: hidden;
     background: #fff;
+    width: 100vw;
+    height: 100vh;
+
 }
 
 #preloader:before {
